--- a/hotel-hive/package.json
+++ b/hotel-hive/package.json
@@ -8,7 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
-    "firebase": "^10.9.0",
+    "firebase": "^10.11.0",
     "papaparse": "^5.4.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
@@ -22,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "firebase": "firebase"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-jest": "^29.7.0",
+    "jest": "^27.5.1",
     "tailwindcss": "^3.4.1"
   }
 }
